@@ -20,7 +20,12 @@ synaptic (0.63.2) UNRELEASED; urgency=low
   * add tooltip to 'properties' and 'search' buttons (LP: #202681)
   * * gtk/rgpreferenceswindow.cc: escape '@/:%' in proxy auth string (LP: 130289)
  
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 16 Feb 2010 11:13:45 +0100
+  [ Oliver Joos ]
+  * common/rconfiguration.cc:
+    - Fix to store setting "Consider recommended packages as dependencies"
+      (closes debian #440027 and LP: #154349)
+
+ -- Oliver Joos <oliver.joos@hispeed.ch>  Sat, 27 Mar 2010 07:07:05 +0100
 
 synaptic (0.63.1) unstable; urgency=low
 
